--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "resend": "^6.2.0",
     "socket.io": "^4.8.1",
