--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "rate-limiter-flexible": "^8.1.0",
     "resend": "^6.2.0",
     "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "stripe": "^19.1.0",
     "uuid": "^13.0.0"
   },
