--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "keywords": [
     "Javascript",
@@ -15,6 +16,7 @@
   "author": "Mazharul Islam",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@libsql/client": "^0.15.15",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -26,6 +28,7 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "rate-limiter-flexible": "^8.1.0",
     "resend": "^6.2.0",
     "socket.io": "^4.8.1",
@@ -36,6 +39,8 @@
   "type": "module",
   "devDependencies": {
     "drizzle-kit": "^0.31.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
+    "vitest": "^4.0.7"
   }
 }
