--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@faker-js/faker": "^10.1.0",
     "@libsql/client": "^0.15.15",
     "bcryptjs": "^3.0.2",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
