added redme for the repo

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ rate-limit.db
 plan.txt
 package-lock.json
 src/route/anwar-res-backend.code-workspace
+*.code-workspace
+ecosystem.config.cjs
+ecosystem.config.js
+ecosystem.config.ts
